# call-pilot-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
call_agent/: __init__.py  agent_templates.py  azure_openai.py  config.py  conversation.py  database.py  outbound.py  rag.py  security.py
call_agent/cli/: place_call.py  smoke_azure.py  validate_env.py
call_agent/web/: __init__.py  agent_routes.py  app.py  auth_routes.py  document_routes.py  voice_test_routes.py
db/: env.py
db/migrations/: 5df870b96556_enable_pgvector_extension.py  7e3470070211_agent_config.py  7e5933c5ff72_agent_type.py  9ca42e6f50ec_agents_table.py  aa80cca64c92_documents_and_chunks.py  cb4561777c61_users_table.py
db/models/: __init__.py  agent.py  document.py  document_chunk.py  user.py
docs/superpowers/plans/: 2026-06-30-callpilot-backend-mvp.md
scripts/: validate_env.py
